[package]
name = "bevy_sly_compute"
version = "0.1.0"
edition = "2021"
categories = []
description = "Bevy Compute Shader Plugin"
exclude = ["assets/"]
keywords = ["bevy"]
repository = "https://github.com/slyedoc/bevy_sly_compute"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_sly_compute_macros = { path = "./macros", version = "0.0.1" }

bevy = "0.12"
parking_lot = "0.12.1"
wgpu = { version = "0.17.1", features = ["naga"] }

codespan-reporting = "0.11.1"
futures-lite = "1.13.0"
bytemuck = "1.4.0"
naga = { version = "0.13.0", features = ["wgsl-in"] }
naga_oil = "0.10"
flume = "0.11"

[dev-dependencies]
bevy-inspector-egui = "0.22"


[patch.crates-io]
bevy-inspector-egui = { git = "https://github.com/slyedoc/bevy-inspector-egui.git", branch = "image-format" }

#This is a one line patch to make the DefaultImageSampler pub

#- pub struct DefaultImageSampler(pub(crate) Sampler);
#+ pub struct DefaultImageSampler(pub Sampler);

# And due to workspace patching, I need to patch all the bevy crates, might have missed one
bevy = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_app = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_asset = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_core = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_derive = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_core_pipeline = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_ecs = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_encase_derive = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_hierarchy = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_log = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_math = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_mikktspace = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_pbr = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_reflect = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_render_macros = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_render = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_time = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_transform = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_window = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_utils = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_tasks = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
bevy_macro_utils = { git = "https://github.com/slyedoc/bevy.git", branch = "texture" }
