[package]
name = "bevy_sly_compute"
version = "0.1.0"
edition = "2021"
categories = []
description = "Bevy Compute Shader Plugin"
exclude = ["assets/"]
keywords = ["bevy"]
repository = "https://github.com/slyedoc/bevy_sly_compute"
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
crossbeam-channel = "0.5.0"
bevy-inspector-egui = { version = "0.23" }
bevy = "0.13"

[dev-dependencies] 
bevy-inspector-egui = "0.23"
bevy_xpbd_3d = { version = "0.4", features = [ "debug-plugin"] }
leafwing-input-manager = "0.13"
bevy_panorbit_camera = { version = "0.16", features = ["bevy_egui"] }

[patch.crates-io]
#bevy-inspector-egui = { git = "https://github.com/slyedoc/bevy-inspector-egui.git", branch = "image-format" }
bevy-inspector-egui = { path = "../../f/bevy-inspector-egui/crates/bevy-inspector-egui" }

# And due to workspace patching, I need to patch all the bevy crates, might have missed one
 bevy = { path = "../../f/bevy" }
 bevy_app = { path = "../../f/bevy/crates/bevy_app" }
 bevy_asset = { path = "../../f/bevy/crates/bevy_asset" }
 bevy_core = { path = "../../f/bevy/crates/bevy_core" }
 bevy_derive = { path = "../../f/bevy/crates/bevy_derive" }
 bevy_core_pipeline = { path = "../../f/bevy/crates/bevy_core_pipeline" }
 bevy_ecs = { path = "../../f/bevy/crates/bevy_ecs" }
 bevy_encase_derive = { path = "../../f/bevy/crates/bevy_encase_derive" }
 bevy_hierarchy = { path = "../../f/bevy/crates/bevy_hierarchy" }
 bevy_log = { path = "../../f/bevy/crates/bevy_log" }
 bevy_math = { path = "../../f/bevy/crates/bevy_math" }
 bevy_mikktspace = { path = "../../f/bevy/crates/bevy_mikktspace" }
 bevy_pbr = { path = "../../f/bevy/crates/bevy_pbr" }
 bevy_reflect = { path = "../../f/bevy/crates/bevy_reflect" }
 bevy_render_macros = { path = "../../f/bevy/crates/bevy_render/macros" }
 bevy_render = { path = "../../f/bevy/crates/bevy_render" }
 bevy_time = { path = "../../f/bevy/crates/bevy_time" }
 bevy_transform = { path = "../../f/bevy/crates/bevy_transform" }
 bevy_window = { path = "../../f/bevy/crates/bevy_window" }
 bevy_utils = { path = "../../f/bevy/crates/bevy_utils" }
 bevy_tasks = { path = "../../f/bevy/crates/bevy_tasks" }
 bevy_macro_utils = { path = "../../f/bevy/crates/bevy_macro_utils" }

# bevy = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_app = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_asset = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_core = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_derive = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_core_pipeline = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_ecs = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_encase_derive = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_hierarchy = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_log = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_math = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_mikktspace = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_pbr = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_reflect = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_render_macros = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_render = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_time = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_transform = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_window = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_utils = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_tasks = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
# bevy_macro_utils = { git = "https://github.com/slyedoc/bevy.git", branch = "bevy_compute" }
